update options with lfr7.2